Grammar.txt
The EBNF grammar of BasicallyBASIC, follow it or you'll get an error!

/* STATEMENTS */


<program>               :   ('NEWLINE'* <statement> 'NEWLINE'*)* 'EOF'

<statement>             :   <function>
                            | <if-conditional>
                            | <while-loop>
                            | <for-loop>
                            | <jump>
                            | <expression>

<function>              :   'DEF' 'IDENTIFIER' '(' ('IDENTIFIER' (',' 'IDENTIFIER')* )? ')' <body> 'END'

<if-conditional>        :   'IF' <expression> 'THEN' <body>
                            <elseif-conditional>*
                            <else-conditional>?
                            'END'

<elseif-conditional>    :   'ELSEIF' <expression> 'THEN' <body>

<else-conditional>      :   'ELSE' <body>

<while-loop>            :   'WHILE' <expression> 'THEN' <body> 'END'

<for-loop>              :   'FOR' <assignment> 'TO' <expression> 'STEP' <expression> 'THEN' <body> 'END'

<jump>                  :   'BREAK' | 'CONTINUE' | ('RETURN' <expression>?)

<body>                  :   <statement>*




/* EXPRESSIONS */


<expression>            :   <assignment>
                            | <logical>

<assignment>            :   'LET' 'IDENTIFIER' ('=' <expression>)?

<logical>               :   <equality> (('AND' | 'OR') <equality>)*

<equality>              :   <comparison> (('==' | '!=') <comparison>)*

<comparison>            :   <term> (('<' | '<=' | '>' | '>=') <term>)*

<term>                  :   <factor> (('+' | '-') <factor>)*

<factor>                :   <power> (('*' | '/' | '%') <power>)*

<power>                 :   <accessor> ('^' <accessor>)*

<accessor>              :   <unary> (':' <unary> ('|' <unary>)? )*

<unary>                 :   ('-' | '+' | 'NOT') <unary>
                            | <call>

<call>                  :   <atom> '(' ( <expression> (',' <expression>)* )? ')'
                            | <atom>

<atom>                  :   'IDENTIFIER'
                            | <literal>
                            | <group>
                            | <list>

<literal>               :   'INTEGER' | 'FLOAT' | 'STRING' | 'TRUE' | 'FALSE' | 'NULL'

<group>                 :   '(' <expression> ')'

<list>                  :   '[' ( <expression> (',' <expression>)* )? ']'
